[package]
name = "secrets-app"
version = "0.13.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Szczepan Zalega <szczepan@nitrokey.com>"]
repository = "https://github.com/Nitrokey/trussed-secrets-app/"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Secrets App - a Trussed app to manage OTP and Password Safe features of Nitrokey 3"

[dependencies]
apdu-dispatch = { version = "0.1.2",  optional = true }
ctaphid-dispatch = { version = "0.1", optional = true }
cbor-smol = "0.4"
delog = "0.1.6"
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
heapless = "0.7"
heapless-bytes = "0.3"
hex-literal = "0.3"
iso7816 = "0.1"
serde = { version = "1", default-features = false }
trussed = { version = "0.1", features = ["clients-3"] }
encrypted_container = { path = "components/encrypted_container" }
block-padding = "0.3.3"
bitflags = "2.3.1"

# extension
trussed-auth = "0.2.2"

[dev-dependencies]
log = { version = "0.4.14", default-features = false }
pretty_env_logger = "0.4.0"

# below are for running the usbip example
trussed-usbip = { version = "0.0.1", features = ["ctaphid"], default-features = false }
usbd-ctaphid = "0.1"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
clap-num = "1.0.0"
delog = { version = "0.1.6", features = ["std-log"] }
fido-authenticator = { version = "0.1.1", features = ["dispatch", "log-all"]}

admin-app = { version = "0.1", features = ["log-all"] }

[features]
default = ["apdu-dispatch"]
devel = ["apdu-dispatch", "log-all", "delog/std-log", "devel-counters"]

# Count accesses to the read-only and read-write persistence storage
devel-counters = []

# Allow to use application over CTAPHID interface
ctaphid = ["ctaphid-dispatch"]

# Enable oath calculate-all command
calculate-all = []

# Require delay after failed request as a brute-force protection for Reverese HOTP Verification
brute-force-delay = []


log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[[example]]
name="usbip"
required-features = ["ctaphid", "devel"]


[patch.crates-io]
flexiber = { git = "https://github.com/Nitrokey/flexiber", tag = "0.1.1.nitrokey" }
apdu-dispatch = { git = "https://github.com/trussed-dev/apdu-dispatch.git", rev = "915fc237103fcecc29d0f0b73391f19abf6576de" }

# forked
admin-app = { git = "https://github.com/Nitrokey/admin-app", rev = "6c88a4bd58f2b6516c424b4dbf9581989ffa915e" }
ctap-types = { git = "https://github.com/nitrokey/ctap-types.git", tag = "v0.1.2-nitrokey.4" }
fido-authenticator = { git = "https://github.com/Nitrokey/fido-authenticator.git", rev = "bb6c07c12a8ea94db1dc897513cdf54f73a275e4" }
trussed = { git = "https://github.com/Nitrokey/trussed", tag = "v0.1.0-nitrokey.12" }

# unreleased upstream changes
usbd-ctaphid = { git = "https://github.com/Nitrokey/usbd-ctaphid", tag = "v0.1.0-nitrokey.1" }
ctaphid-dispatch = { git = "https://github.com/Nitrokey/ctaphid-dispatch", tag = "v0.1.1-nitrokey.2" }
serde-indexed = { git = "https://github.com/sosthene-nitrokey/serde-indexed.git", rev = "5005d23cb4ee8622e62188ea0f9466146f851f0d" }

# unreleased crates
trussed-auth = { git = "https://github.com/Nitrokey/trussed-auth", tag = "v0.2.2-nitrokey.1" }
trussed-usbip = { git = "https://github.com/Nitrokey/pc-usbip-runner", tag = "v0.0.1-nitrokey.1" }
