[package]
name = "secrets-app"
version = "0.13.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Szczepan Zalega <szczepan@nitrokey.com>"]
repository = "https://github.com/Nitrokey/trussed-secrets-app/"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Secrets App - a Trussed app to manage OTP and Password Safe features of Nitrokey 3"

[dependencies]
apdu-app = { version = "0.1",  optional = true }
ctaphid-dispatch = { version = "0.1", optional = true }
cbor-smol = "0.4"
delog = "0.1.6"
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
heapless = "0.7"
heapless-bytes = "0.3"
hex-literal = "0.3"
iso7816 = "0.1.3"
serde = { version = "1", default-features = false }
trussed = { version = "0.1", features = ["clients-3"] }
encrypted_container = { path = "components/encrypted_container" }
block-padding = "0.3.3"
bitflags = "2.3.1"

# extension
trussed-auth = "0.3.0"

[features]
default = ["apdu-dispatch"]
devel = ["apdu-dispatch", "log-all", "delog/std-log", "devel-counters"]
apdu-dispatch = ["dep:apdu-app"]

# Count accesses to the read-only and read-write persistence storage
devel-counters = []

# Allow to use application over CTAPHID interface
ctaphid = ["ctaphid-dispatch"]

# Enable oath calculate-all command
calculate-all = []

# Require delay after failed request as a brute-force protection for Reverese HOTP Verification
brute-force-delay = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
ctaphid-dispatch = { git = "https://github.com/Nitrokey/ctaphid-dispatch", tag = "v0.1.1-nitrokey.2" }
flexiber = { git = "https://github.com/Nitrokey/flexiber", tag = "0.1.1.nitrokey" }
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", rev = "ebd27e49ca321089d01d8c9b169c4aeb58ceeeca" }
trussed = { git = "https://github.com/Nitrokey/trussed", tag = "v0.1.0-nitrokey.18" }
trussed-auth = { git = "https://github.com/trussed-dev/trussed-auth", tag = "v0.3.0" }
