[package]
name = "secrets-app"
version = "0.13.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Szczepan Zalega <szczepan@nitrokey.com>"]
repository = "https://github.com/Nitrokey/trussed-secrets-app/"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Secrets App - a Trussed app to manage OTP and Password Safe features of Nitrokey 3"

[dependencies]
apdu-app = { version = "0.1",  optional = true }
ctaphid-app = { version = "0.1.0-rc.1", optional = true }
cbor-smol = "0.5"
delog = "0.1.6"
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
heapless = "0.7"
heapless-bytes = "0.3"
hex-literal = "0.3"
iso7816 = "0.1.3"
littlefs2-core = "0.1"
serde = { version = "1", default-features = false }
trussed-core = { version = "0.1", features = ["chacha8-poly1305", "crypto-client", "hmac-sha1", "hmac-sha256", "filesystem-client", "sha256", "ui-client"] }
encrypted_container = { path = "components/encrypted_container" }
block-padding = "0.3.3"
bitflags = "2.3.1"

# extension
trussed-auth = "0.3.0"

[dev-dependencies]
trussed = { version = "0.1", default-features = false, features = ["clients-3"] }

[features]
default = ["apdu-dispatch"]
devel = ["apdu-dispatch", "log-all", "delog/std-log", "devel-counters"]
apdu-dispatch = ["dep:apdu-app"]
ctaphid-dispatch = ["dep:ctaphid-app"]

# Count accesses to the read-only and read-write persistence storage
devel-counters = []

# Allow to use application over CTAPHID interface
ctaphid = ["ctaphid-dispatch"]

# Enable oath calculate-all command
calculate-all = []

# Require delay after failed request as a brute-force protection for Reverese HOTP Verification
brute-force-delay = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
ctaphid-app = { git = "https://github.com/trussed-dev/ctaphid-dispatch", branch = "release-app-v0.1.0-rc.1" }
flexiber = { git = "https://github.com/Nitrokey/flexiber", tag = "0.1.1.nitrokey" }
trussed = { git = "https://github.com/trussed-dev/trussed", rev = "8a9bb9d79e40c2dcf026cf611302109f776bec83" }
trussed-core = { git = "https://github.com/trussed-dev/trussed", rev = "8a9bb9d79e40c2dcf026cf611302109f776bec83" }
trussed-auth = { git = "https://github.com/trussed-dev/trussed-auth", branch = "trussed-core" }
